{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 52,
  "lineage": "97629dd5-394e-e53f-86ad-352f3e541384",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-ngw",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d1a72cec85d8283c",
            "public_dns": "ec2-54-241-54-50.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.54.50",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-nat-gateway-1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:internet-gateway/igw-0f23400e4deb2fb5a",
            "id": "igw-0f23400e4deb2fb5a",
            "owner_id": "889473501810",
            "tags": {
              "Name": "Project-igw"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d1a72cec85d8283c",
            "id": "nat-02402c22305836653",
            "network_interface_id": "eni-091df52801adc308c",
            "private_ip": "10.0.1.195",
            "public_ip": "54.241.54.50",
            "subnet_id": "subnet-03120367e71c2802b",
            "tags": {
              "Name": "nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-routes",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0095259701f667051",
            "owner_id": "889473501810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02402c22305836653",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-1"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037a242dffbda4d5d",
            "owner_id": "889473501810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02402c22305836653",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-2"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-routes",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00ea60e70843cb1e3",
            "owner_id": "889473501810",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f23400e4deb2fb5a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-subnet-routes"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-routes-linking",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a07e94a125f57c1",
            "route_table_id": "rtb-0095259701f667051",
            "subnet_id": "subnet-06b395f2888b91633"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaba769d9fcc512e",
            "route_table_id": "rtb-037a242dffbda4d5d",
            "subnet_id": "subnet-0430a1f5b41075e67"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-ngw",
            "module.vpc.aws_nat_gateway.ngw",
            "module.vpc.aws_route_table.private-routes",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cd64ef33657f783",
            "route_table_id": "rtb-00ea60e70843cb1e3",
            "subnet_id": "subnet-03120367e71c2802b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf6a469294d37159",
            "route_table_id": "rtb-00ea60e70843cb1e3",
            "subnet_id": "subnet-0285704e551569623"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-routes",
            "module.vpc.aws_subnet.public-subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-RDS",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:subnet/subnet-08885fe3325c9cba9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-08885fe3325c9cba9",
            "map_public_ip_on_launch": false,
            "owner_id": "889473501810",
            "tags": {
              "Name": "private-subnets-RDS"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:subnet/subnet-06b395f2888b91633",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-06b395f2888b91633",
            "map_public_ip_on_launch": false,
            "owner_id": "889473501810",
            "tags": {
              "Location": "California",
              "Name": "private-subnets-1-app"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:subnet/subnet-0430a1f5b41075e67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0430a1f5b41075e67",
            "map_public_ip_on_launch": false,
            "owner_id": "889473501810",
            "tags": {
              "Location": "California",
              "Name": "private-subnets-2-app"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "each": "list",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:subnet/subnet-03120367e71c2802b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03120367e71c2802b",
            "map_public_ip_on_launch": true,
            "owner_id": "889473501810",
            "tags": {
              "Location": "California",
              "Name": "public-subnets-1-web"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:subnet/subnet-0285704e551569623",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0285704e551569623",
            "map_public_ip_on_launch": true,
            "owner_id": "889473501810",
            "tags": {
              "Location": "California",
              "Name": "public-subnets-2-web"
            },
            "vpc_id": "vpc-046ab91a83f89c27d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "module.vpc.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:889473501810:vpc/vpc-046ab91a83f89c27d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0605572638d2debd6",
            "default_route_table_id": "rtb-058a2310ccb992ccd",
            "default_security_group_id": "sg-0b21e6a3648f2e45e",
            "dhcp_options_id": "dopt-a7c1d9c0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-046ab91a83f89c27d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-058a2310ccb992ccd",
            "owner_id": "889473501810",
            "tags": {
              "Location": "California",
              "Name": "Project-vpc"
            }
          }
        }
      ]
    }
  ]
}